correcoes de types + ajustes